# sgg

./: .gitignore  AdvancedGraphics_Handbook.md  CMakeLists.txt  Doxyfile  INSTRUCTIONS_MACOS.txt  README.md  SDL2_patch_macOS.sh  TODO.txt  build_demo_macOS.sh  build_demo_macOS_Silicon.sh  build_demo_x64.bat  build_demo_x64.sh  build_sgg_macOS.sh  build_sgg_macOS_Silicon.sh  build_sgg_x64.bat  build_sgg_x64.sh  build_sgg_x64_lean.bat
cmake/: AddUninstallTarget.cmake  FindSDL2.cmake  FindSDL2_mixer.cmake  FindWrap_Freetype.cmake  FindWrap_GLEW.cmake  FindWrap_SDL2.cmake  FindWrap_SDL2_mixer.cmake  FindWrap_glm.cmake  Installation.cmake  sgg-config.build.cmake.in  sgg-config.cmake.in
demo/: demo.cpp  vecmath.h
doc/html/: _example-_distance_field_8cpp-example.html  _getting.html  ads_8h.html  ads_8hpp.html  ads_8hpp_source.html  class_audio_manager-members.html  class_font_lib.html  class_shader-members.html  class_shader.html  class_uniform-members.html  class_uniform.html  classgraphics_1_1_g_l_backend-members.html  classgraphics_1_1_g_l_backend.html  classgraphics_1_1_texture_manager-members.html  classgraphics_1_1_texture_manager.html  classrt_1_1_a_siterator-members.html  classrt_1_1_d_f_iterator-members.html  classrt_1_1_h_griditerator-members.html  classrt_1_1_soupiterator-members.html  classrt_1_1_soupiterator.html  classrt_1_1ads_1_1rt_a_d_s-members.html  classrt_1_1ads_1_1rt_a_d_s_distance_field-members.html  classrt_1_1ads_1_1rt_a_d_s_distance_field.html  classrt_1_1ads_1_1rt_iterator_d_f-members.html  classrt_1_1ads_1_1rt_iterator_d_f.html  classrt_1_1ads_1_1rt_iterator_soup-members.html  classrt_1_1ads_1_1rt_iterator_soup.html  classrt_1_1ads_1_1rt_soup-members.html  classrt_1_1df_visualizer-members.html  classrt_1_1io_1_1rt_attribute_map-members.html  classrt_1_1io_1_1rt_p_l_y_writer-members.html  classrt_1_1io_1_1rt_reader-members.html  classrt_1_1io_1_1rt_reader.html  classrt_1_1io_1_1rt_writer-members.html  classrt_1_1rt_d_f_block-members.html  classrt_1_1rt_h_grid_block-members.html  classrt_1_1rt_h_grid_block.html  classrt_1_1rt_i_c_p.html  classrt_1_1rt_iterator-members.html  classrt_1_1rt_iterator.html  (+125 more)
docs/: _audio_manager_8cpp.html  _audio_manager_8h.html  _audio_manager_8h_source.html  _example-_p_l_y_reader_8cpp-example.html  _example-_p_l_y_writer_8cpp-example.html  _g_lbackend_8cpp.html  _g_lbackend_8h.html  _g_lbackend_8h_source.html  ads_8h_source.html  annotated.html  class_audio_manager.html  class_font_lib-members.html  classes.html  classgraphics_1_1_texture-members.html  classgraphics_1_1_texture.html  classrt_1_1_a_siterator.html  classrt_1_1_d_f_iterator.html  classrt_1_1_h_griditerator.html  classrt_1_1ads_1_1rt_a_d_s.html  classrt_1_1ads_1_1rt_a_d_s_soup-members.html  classrt_1_1ads_1_1rt_a_d_s_soup.html  classrt_1_1ads_1_1rt_acceleration_structure-members.html  classrt_1_1ads_1_1rt_acceleration_structure.html  classrt_1_1ads_1_1rt_distance_field-members.html  classrt_1_1ads_1_1rt_distance_field.html  classrt_1_1ads_1_1rt_iterator-members.html  classrt_1_1ads_1_1rt_iterator.html  classrt_1_1ads_1_1rt_soup.html  classrt_1_1df_comparator-members.html  classrt_1_1df_comparator.html  classrt_1_1df_visualizer.html  classrt_1_1io_1_1rt_attribute_map.html  classrt_1_1io_1_1rt_p_l_y_writer.html  classrt_1_1io_1_1rt_writer.html  classrt_1_1rt_acceleration_structure-members.html  classrt_1_1rt_acceleration_structure.html  classrt_1_1rt_attribute_map-members.html  classrt_1_1rt_attribute_map.html  classrt_1_1rt_d_f_block.html  classrt_1_1rt_d_f_iterator-members.html  (+165 more)
doxygen/: DoxygenLayout.xml  intro.dox
doxygen/html/: doxygen_crawl.html  index.html  menudata.js  navtreedata.js  navtreeindex0.js  page_building_sgg.html  page_building_with_sgg.html  page_simple_app.html  pages.html
doxygen/html/search/: all_10.js  all_12.js  all_14.js  all_3.js  all_5.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  pages_0.js  pages_1.js  pages_11.js  pages_13.js  pages_2.js  pages_4.js  pages_6.js  pages_7.js  pages_8.js  pages_9.js  pages_f.js  searchdata.js
graphics/: AudioManager.cpp  GLbackend.cpp  GLbackend.h  audio.cpp  commonshaders.h  fonts.cpp  fonts.h  graphics.cpp  graphics.h  scancodes.h  shader.cpp  texture.cpp
sgg/: Audio.cpp  AudioManager.cpp  Fonts.cpp  GLbackend.cpp  GLbackend.h  Graphics.cpp  Shader.cpp  TEST.cpp  Texture.cpp  TextureManager.cpp  audio.cpp  commonshaders.h  fonts.cpp  fonts.h  graphics.cpp  graphics.h  lodepng.cpp  shader.cpp  shader.h  texture.cpp  texture.h
sgg/api/: Graphics.cpp
sgg/api/headers/: Graphics.h
sgg/core/audio/: Audio.cpp  AudioManager.cpp
sgg/core/audio/headers/: Audio.h  AudioManager.h
sgg/core/backend/: GLBackend.h  GLBackendCore.cpp  GLBackendDraw.cpp  GLBackendInput.cpp  GLBackendTransform.cpp
sgg/core/fonts/: Fonts.cpp
sgg/core/fonts/headers/: Fonts.h
sgg/core/graphics/rendering/batching/: BatchRenderer.cpp
sgg/core/graphics/rendering/batching/headers/: BatchRenderer.h
sgg/core/graphics/rendering/core/: Buffer.cpp  VertexArray.cpp
sgg/core/graphics/rendering/core/headers/: Buffer.h  VertexArray.h
sgg/core/graphics/rendering/factories/: BatchRendererFactory.cpp  BufferFactory.cpp  BufferPool.cpp  VAOFactory.cpp
sgg/core/graphics/rendering/factories/headers/: BatchRendererFactory.h  BufferFactory.h  BufferPool.h  VAOFactory.h
sgg/core/graphics/rendering/performance/headers/: GLPerformanceMonitor.h
sgg/core/graphics/rendering/utils/: DrawCommands.cpp  GLUtils.cpp
sgg/core/graphics/rendering/utils/headers/: DrawCommands.h  GLUtils.h
sgg/core/graphics/shaders/: Shader.cpp
sgg/core/graphics/shaders/headers/: Shader.h
sgg/core/graphics/textures/: Texture.cpp  TextureManager.cpp
sgg/core/graphics/textures/headers/: Texture.h  TextureManager.h
sgg/core/utils/: lodepng.cpp
sgg/core/utils/headers/: CompilerTraits.h  Lodepng.h  Scancodes.h
sgg/headers/: AudioManager.h  Fonts.h  GLbackend.h  Graphics.h  Shader.h  Texture.h  TextureManager.h
sgg/test/: test.cpp
